--- a/project_1.html
+++ b/project_1.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Project One!</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style_1.css">
 </head>
 
 <body>
